GB3 homework 6 учел замечания по параметризированным тестам, по сложности прохода массива и по косметическим ошибкам